--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 Hello there, awesome person!
 <html>
+    <head>
+        <title>My awesome web page</title>
+    </head>
+
     <body>
         The HTML content goes here.
     </body>
