--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ Hello there, awesome person!
     </head>
     
     <body>
-        <h1></h1>
+        <h1>This is Header</h1>
+        <img src="https://avatars.githubusercontent.com/u/79245318?v=4">
         The HTML content goes here.
     </body>
 </html>
