--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@ Hello there, awesome person!
         <h1>This is Header</h1>
         <img src="https://avatars.githubusercontent.com/u/79245318?v=4">
         The HTML content goes here.
+        <ol>
+            <li>This</li>
+            <li>Is an</li>
+            <li>Ordered list</li>
+        </ol>
+        <ul>
+            <li>This</li>
+            <li>Is an</li>
+            <li>Unordered list</li>
+        </ul>
     </body>
 </html>
